# cognito-auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  errors.py  limiter.py  security.py
app/domain/: models.py
app/repository/: cognito_repository.py
app/services/: auth_service.py
configs/: configs.yaml
